final edits made

--- a/convenient-care.html
+++ b/convenient-care.html
@@ -110,21 +110,21 @@
             <div class="col-md-8">
               <!-- Image 1 -->
               <div class="project-item">
-                <img src="assets/portfolio-images/convenient-care/Picture_1.jpg" alt="Image Description" class="img-responsive">
+                <img src="assets/portfolio-images/convenient-care/Picture_1.jpg" alt="Direct Mail" class="img-responsive">
                 <h5>Direct Mail</h5>
                 <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> -->
               </div><!-- / .project-item -->
 
               <!-- Image 2 -->
               <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
-                <img src="assets/portfolio-images/convenient-care/Picture_2.jpg" alt="Image Description" class="img-responsive">
+                <img src="assets/portfolio-images/convenient-care/Picture_2.jpg" alt="OOH Bus Shelter" class="img-responsive">
                 <h5>OOH Bus Shelter</h5>
                 <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> -->
               </div><!-- / .project-item -->
 
               <!-- Image 3 -->
               <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
-                <img src="assets/portfolio-images/convenient-care/Picture_3.jpg" alt="Image Description" class="img-responsive">
+                <img src="assets/portfolio-images/convenient-care/Picture_3.jpg" alt="Print Ad" class="img-responsive">
                 <h5>Print Ad</h5>
                 <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> -->
               </div><!-- / .project-item -->
@@ -172,7 +172,7 @@
             <div class="col-md-6">
               <!-- Image 1 -->
               <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
-                <img src="assets/portfolio-images/convenient-care/Picture_6.jpg" alt="Image Description" class="img-responsive">
+                <img src="assets/portfolio-images/convenient-care/Picture_6.jpg" alt="Email Marketing" class="img-responsive">
                 <h5>Email Marketing</h5>
                 <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> -->
               </div><!-- / .project-item -->
@@ -181,8 +181,8 @@
               <div class="col-md-6">
                 <!-- Image 7 -->
                 <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
-            <img src="assets/portfolio-images/convenient-care/Picture_7.jpg" alt="Image Description" class="img-responsive">
-            <h5>Image Description</h5>
+            <img src="assets/portfolio-images/convenient-care/Picture_7.jpg" alt="Nextdoor Advertisement" class="img-responsive">
+            <h5>Nextdoor Advertisement</h5>
             <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> -->
           </div><!-- / .project-item -->
         </div>
@@ -190,7 +190,7 @@
             <div class="col-md-6">
               <!-- Image 1 -->
               <div class="project-item">
-                <img src="assets/portfolio-images/convenient-care/Picture_4.jpg" alt="Image Description" class="img-responsive">
+                <img src="assets/portfolio-images/convenient-care/Picture_4.jpg" alt="Print Ad in Colorado Hometown Weekly" class="img-responsive">
                 <h5>Print Ad in Colorado Hometown Weekly</h5>
                 <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> -->
               </div><!-- / .project-item -->
@@ -199,7 +199,7 @@
               <div class="col-md-6">
                 <!-- Image 1 -->
                 <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
-                  <img src="assets/portfolio-images/convenient-care/Picture_5.jpg" alt="Image Description" class="img-responsive">
+                  <img src="assets/portfolio-images/convenient-care/Picture_5.jpg" alt="Print Ad in The Denver Post" class="img-responsive">
                   <h5>Print Ad in The Denver Post</h5>
                   <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> -->
                 </div><!-- / .project-item -->
