--- a/new_physicians.html
+++ b/new_physicians.html
@@ -110,7 +110,7 @@
             <div class="col-md-8">
               <!-- Image 1 -->
               <div class="project-item">
-                <img src="assets/portfolio-images/new-physicians/nw-physicians-1.jpg" alt="Direct Mail" class="img-responsive">
+                <img src="assets/portfolio-images/new-physicians/New-Physician-Campaign_DM.gif" alt="Direct Mail" class="img-responsive">
                 <h5>Direct Mail</h5>
                 <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> -->
               </div><!-- / .project-item -->
@@ -135,15 +135,7 @@
                 <h5>Print Ad</h5>
                 <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> -->
               </div><!-- / .project-item -->
-
-              <!-- Image 3 -->
-              <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
-                <img src="assets/portfolio-images/new-physicians/new-physicians-3.jpg" alt="Image Description" class="img-responsive">
-                <h5>Email Marketing</h5>
-                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> -->
-              </div><!-- / .project-item -->
-
-              
+ 
             </div><!-- / .col-md-8 -->
 
 
