--- a/ortho_colorado.html
+++ b/ortho_colorado.html
@@ -110,20 +110,20 @@
             <div class="col-md-8">
               <!-- Image 1 -->
               <div class="project-item">
-                <img src="assets/portfolio-images/ortho_colorado/ortho-popup.jpg" alt="Image Description" class="img-responsive">
-                <h5>Pop Up</h5>
+                <img src="assets/portfolio-images/ortho_colorado/ortho-popup.jpg" alt="Email Marketing" class="img-responsive">
+                <h5>Email Marketing</h5>
               </div><!-- / .project-item -->
 
               <!-- Image 2 -->
               <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
-                <img src="assets/portfolio-images/ortho_colorado/ortho-print.jpg" alt="Image Description" class="img-responsive">
+                <img src="assets/portfolio-images/ortho_colorado/ortho-print.jpg" alt="Print Ad in Denver Life" class="img-responsive">
                 <h5>Print Ad in Denver Life</h5>
                 <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> -->
               </div><!-- / .project-item -->
 
               <!-- Image 3 -->
               <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
-                <img src="assets/portfolio-images/ortho_colorado/ortho-facebook.jpg" alt="Image Description" class="img-responsive">
+                <img src="assets/portfolio-images/ortho_colorado/ortho-facebook.jpg" alt="Facebook Ads" class="img-responsive">
                 <h5>Facebook Ads</h5>
                 <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> -->
               </div><!-- / .project-item -->
@@ -171,7 +171,7 @@
             <div class="col-md-8">
               <!-- Image 1 -->
               <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
-                <img src="assets/portfolio-images/ortho_colorado/ortho-facebook2.jpg" alt="Image Description" class="img-responsive">
+                <img src="assets/portfolio-images/ortho_colorado/ortho-facebook2.jpg" alt="Facebook Sponsored Ads" class="img-responsive">
                 <h5>Facebook Sponsored Ads</h5>
                 <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> -->
               </div><!-- / .project-item -->
@@ -189,8 +189,11 @@
         <div class="col-md-8">
           <!-- Image 1 -->
           <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
-            <a href="assets/portfolio-images/ortho_colorado/ortho_excellence_radio.mp3" target="_blank">
             <img src="assets/portfolio-images/ortho_colorado/thumbnail_audio.png" alt="Radio Ad Play Button" class="img-responsive">
+            <audio controls>
+              <source src="assets/portfolio-images/ortho_colorado/ortho_excellence_radio.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+            </audio>
             <h5>Radio Ad (click to hear audio)</h5></a>
             <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> -->
           </div><!-- / .project-item -->
@@ -198,9 +201,9 @@
 
         <div class="col-md-8">
           <!-- Image 7 -->
-          <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
+          <!-- <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
             <iframe width="750" height="450" src="https://www.youtube.com/embed/fwd8BKEGFsA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <h5>TV Advertising</h5>
+            <h5>TV Advertising</h5> -->
           <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> -->
           </div><!-- / .project-item -->
         </div>
