--- a/3g_healthcare.html
+++ b/3g_healthcare.html
@@ -142,7 +142,7 @@
                   <li><h6>Client:</h6><span>3G Healthcare</span></li>
                   <!-- <li><h6>Title:</h6><span>Don't Wait</span></li> -->
                   <li><h6>Date:</h6><span>Current</span></li>
-                  <li><h6>Link:</h6><a target="blank" href="https://www.3ghealthcare.com">Click Here</a></li>
+                  <li><h6>Link:</h6><a target="blank" href="https://www.3ghc.com">Click Here</a></li>
                   <li><h6>Tactics:</h6><span>Website Development</span></li>
                 </ul>
               </div>
