--- a/amf.html
+++ b/amf.html
@@ -142,7 +142,7 @@
                   <li><h6>Client:</h6><span>Aubrey Moon Farms</span></li>
                   <li><h6>Title:</h6><span>BRANDING IDENTITY + WEB DEVELOPMENT</span></li>
                   <li><h6>Date:</h6><span>Current</span></li>
-                  <li><h6>Link:</h6><a target="blank" href="https://www.centura.org/our-network/centura-health-physician-group">Click Here</a></li>
+                  <li><h6>Link:</h6><a target="blank" href="http://aubreymoonfarm.com/">Click Here</a></li>
                   <li><h6>Tactics:</h6><span>Brand Development, Website Design, Sales Slips, Pull Up Banners, Tri-Fold, Brochure, Vinyl Banner, and Trade Show Booth</span></li>
                 </ul>
               </div>
