--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 
           <!-- Image -->
           <div class="t-image">
-            <img src="assets/images/team/quaid_all_business.jpg" alt="Quaid Profile Photo" class="img-responsive">
+            <img src="assets/images/team/Quaid_All_Business_360x440.jpg" alt="Quaid Profile Photo" class="img-responsive">
             <div class="t-description">
               <div class="content-wrapper">
                 <img src="assets/images/team/quaid.jpg" alt="Quaid Personality Photo" class="img-responsive">
@@ -584,7 +584,7 @@
                   <img src="assets/images/portfolio-thumbs/3g-healthcare_thumb.jpg" alt="3G Healthcare">
                   <div class="p-hover">
                     <div class="p-content">
-                      <h4>Website Development - 3G Healthcare</h4>
+                      <h4>Website Development <br> 3G Healthcare</h4>
                       <h6 class="subheading">Webdesign</h6>
                     </div>
                   </div>
@@ -599,7 +599,7 @@
                   <img src="assets/images/portfolio-thumbs/LUH_60thThumb.jpg" alt="Longmont United Hospital">
                   <div class="p-hover">
                     <div class="p-content">
-                      <h4>60th Anniversary - Longmont United Hospital</h4>
+                      <h4>60th Anniversary <br> Longmont United Hospital</h4>
                       <h6 class="subheading">OOH Advertising</h6>
                     </div>
                   </div>
