updated google maps API

--- a/index.html
+++ b/index.html
@@ -375,8 +375,7 @@
           <div class="t-image">
             <i class="fa fa-user bg-icon"></i>
             <div class="t-description">
-              <a href="mailto:jobs@fjgadvertising.com?Subject=Website Job Inquiry" target="_top">
-              <h4 class="h-alt">Apply Now</h4></a>
+              <h4 class="h-alt">Apply Now</h4>
               <p>We are always looking for passionate creative and strategic minds to join our team. If you think you have the talent, send us your resume.</p>
             </div>
           </div>
@@ -385,7 +384,7 @@
           <div class="t-info">
             <h4 class="t-name">You?</h4>
             <span class="t-role">Job Title</span>
-            <button class="btn btn-small" type="file">send resume</button>
+            <a href="mailto:jobs@fjgadvertising.com" target="_top"><button class="btn btn-small" type="file">send resume</button></a>
           </div>
 
         </div><!-- / .t-item -->
