updated about images to be responsive

--- a/about.html
+++ b/about.html
@@ -84,17 +84,16 @@
 
         <!-- ========== Enter Your Content Here ========== -->
 
-        <section class="container section">
-          <div class="row ws-m">
-            <header class="sec-heading">
-              <img src="assets/images/bike-logo.png" alt="FJG Logo">
+        <section class="container section ft-centered">
+          <div class="col-md-3 col-sm-6 mb-sm-100">
+            <header class="sec-heading img-responsive">
+              <img src="assets/images/bike-logo.png" alt="FJG Logo" class="">
               <h2><span class="about-heading">FJG HISTORY</span></h2>
-              <!-- <span class="subheading">Dummy content, replace it with your content</span> -->
             </header>
 
             <div class="col-md-6">
               <div class="about-images-first">
-                  <img src="assets/images/history-about-us.jpg" alt="">
+                  <img src="assets/images/history-about-us.jpg" alt="" class="img-responsive">
               </div>
             </div>
             <div class="col-md-6">
@@ -104,23 +103,20 @@
               <p>Friend and former colleague Carson Kraig joined the team in October 2017, bringing with him years of advertising experience, best-in-class service, and a highly strategic creative approach. Brian and Carson’s collective digital, traditional, and media buying background give FJG an edge in today’s advertising landscape.</p>
             </div>
             </div>
-            <!-- <div class="col-md-4">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam repudiandae, ex fugit vero, earum quibusdam exercitationem impedit voluptas officiis placeat, reiciendis totam dolore atque ipsam incidunt quasi. Fugiat, doloribus, quia!</p>
-            </div> -->
           </div><!-- / .row -->
 
-          <div class="row">
+          <div class="col-md-3 col-sm-6 mb-sm-50">
             <div class="col-md-12">
               <div class="about-second">
-                  <img src="assets/images/namesake.jpg" alt="">
+                  <img src="assets/images/namesake.jpg" alt="" class="img-responsive">
               </div>
             </div>
           </div>
 
-          <div class="row">
+          <div class="col-md-3 col-sm-6 mb-sm-50">
             <div class="col-md-6">
-              <div class="about-signature">
-                <img src="assets/images/signature.png" alt="">
+              <div class="about-signature img-responsive">
+                <img src="assets/images/signature.png" alt="" class="img-responsive">
               </div>
               <p>When Brian started his own advertising agency, he wanted its namesake to honor the man who was such a positive role model in his life: his grandfather, Fabriciano Juan Garcia. FJG Advertising is named after his grandfather, the first-generation, Texas-born, Mexican-American with an unyielding work ethic that taught those around him to keep reaching for their goals and to never accept defeat. As soon as he became of age, Mr. Garcia began working as a laborer and then on the Colonial Country Club golf course. He used his bilingual skills to rise up through the ranks of middle management, serve in the US Army, and spend 42 years with General Dynamics, retiring as Lead Inspector on the F-16 Fighting Falcon fighter jet project.</p>
 
@@ -129,7 +125,7 @@
 
             <div class="col-md-6">
               <div class="about-third">
-                  <img src="assets/images/company-mark.jpg" alt="">
+                  <img src="assets/images/company-mark.jpg" alt="" class="img-responsive">
               </div>
             </div>
           </div>
