CTA button update sitewide

--- a/new_physicians.html
+++ b/new_physicians.html
@@ -186,7 +186,7 @@
             
             <div class="cta-wrapper">
               <h3 class="h-alt wow fadeIn" data-wow-delay=".1s" data-wow-duration="1s">Have a project in mind? Get a quote today</h3>
-              <a href="#contact" class="btn btn-light btn-large wow fadeIn" data-wow-delay=".3s" data-wow-duration="1s">Get A Quote</a>
+              <a href="contact.html" class="btn btn-light btn-large wow fadeIn" data-wow-delay=".3s" data-wow-duration="1s">Get A Quote</a>
             </div>
 
           </div>
@@ -321,7 +321,7 @@
       <div class="row">
         
         <div class="col-sm-6">
-          <small>&copy; 2019 FJG Advertising. Designed by <a class="no-style-link" href="http://fjgadvertising.com" target="_blank">FJG Advertising</a></small>
+          <small>&copy; 2020 FJG Advertising. Designed by <a class="no-style-link" href="http://fjgadvertising.com" target="_blank">FJG Advertising</a></small>
         </div>
 
         <div class="col-sm-6">
