--- a/tickled_pink.html
+++ b/tickled_pink.html
@@ -110,12 +110,6 @@
           <div class="row">
 
             <div class="col-md-8">
-              <!-- Image 1 -->
-              <div class="project-item">
-                <img src="assets/portfolio-images/tickled_pink/4-LUH_Pink_Header.jpg" alt="Tickled Pink Header" class="img-responsive">
-                <h5>Header</h5>
-              </div><!-- / .project-item -->
-
               <!-- Image 2 -->
               <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
                 <img src="assets/portfolio-images/tickled_pink/1-LUH_Pink_PrintAd.jpg" alt="Tickled Pink Print Ad" class="img-responsive">
@@ -193,7 +187,7 @@
             
             <div class="cta-wrapper">
               <h3 class="h-alt wow fadeIn" data-wow-delay=".1s" data-wow-duration="1s">Have a project in mind? Get a quote today</h3>
-              <a href="#contact" class="btn btn-light btn-large wow fadeIn" data-wow-delay=".3s" data-wow-duration="1s">Get A Quote</a>
+              <a href="contact.html" class="btn btn-light btn-large wow fadeIn" data-wow-delay=".3s" data-wow-duration="1s">Get A Quote</a>
             </div>
 
           </div>
@@ -328,7 +322,7 @@
       <div class="row">
         
         <div class="col-sm-6">
-          <small>&copy; 2019 FJG Advertising. Designed by <a class="no-style-link" href="http://fjgadvertising.com" target="_blank">FJG Advertising</a></small>
+          <small>&copy; 2020 FJG Advertising. Designed by <a class="no-style-link" href="http://fjgadvertising.com" target="_blank">FJG Advertising</a></small>
         </div>
 
         <div class="col-sm-6">
