--- a/3g_healthcare.html
+++ b/3g_healthcare.html
@@ -115,13 +115,6 @@
                 <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> -->
               </div><!-- / .project-item -->
 
-              <!-- Image 2 -->
-              <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
-                <img src="assets/portfolio-images/3g_healthcare/3g-2.jpg" alt="Image Description" class="img-responsive">
-                <h5>Header Image</h5>
-                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> -->
-              </div><!-- / .project-item -->
-
               <!-- Image 3 -->
               <!-- <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
                 <img src="assets/portfolio-images/specialized_showcase/specialized-3.jpg" alt="Image Description" class="img-responsive">
@@ -181,7 +174,7 @@
             
             <div class="cta-wrapper">
               <h3 class="h-alt wow fadeIn" data-wow-delay=".1s" data-wow-duration="1s">Have a project in mind? Get a quote today</h3>
-              <a href="#contact" class="btn btn-light btn-large wow fadeIn" data-wow-delay=".3s" data-wow-duration="1s">Get A Quote</a>
+              <a href="contact.html" class="btn btn-light btn-large wow fadeIn" data-wow-delay=".3s" data-wow-duration="1s">Get A Quote</a>
             </div>
 
           </div>
@@ -316,7 +309,7 @@
       <div class="row">
         
         <div class="col-sm-6">
-          <small>&copy; 2019 FJG Advertising. Designed by <a class="no-style-link" href="http://fjgadvertising.com" target="_blank">FJG Advertising</a></small>
+          <small>&copy; 2020 FJG Advertising. Designed by <a class="no-style-link" href="http://fjgadvertising.com" target="_blank">FJG Advertising</a></small>
         </div>
 
         <div class="col-sm-6">
