--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
             
             <div class="cta-wrapper">
               <!-- <h3 class="h-alt wow fadeIn" data-wow-delay=".1s" data-wow-duration="1s">See what we can do for you</h3> -->
-              <a href="#" class="btn btn-light btn-large wow fadeIn" data-wow-delay=".3s" data-wow-duration="1s">See what we can do for you</a>
+              <a href="contact.html" class="btn btn-light btn-large wow fadeIn" data-wow-delay=".3s" data-wow-duration="1s">See what we can do for you</a>
             </div>
 
           </div>
@@ -815,7 +815,7 @@
               <div class="row">
                 
                 <div class="col-sm-6">
-                  <small>&copy; 2019 FJG Advertising. Designed by <a class="no-style-link" href="http://fjgadvertising.com" target="_blank">FJG Advertising</a></small>
+                  <small>&copy; 2020 FJG Advertising. Designed by <a class="no-style-link" href="http://fjgadvertising.com" target="_blank">FJG Advertising</a></small>
                 </div>
 
                 <div class="col-sm-6">
