fixed about page

--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
         <!-- ========== Enter Your Content Here ========== -->
 
         <section class="container section ft-centered">
-          <div class="col-md-3 col-sm-6 mb-sm-100">
+          <div class="row">
             <header class="sec-heading img-responsive">
               <img src="assets/images/bike-logo.png" alt="FJG Logo" class="">
               <h2><span class="about-heading">FJG HISTORY</span></h2>
@@ -105,7 +105,7 @@
             </div>
           </div><!-- / .row -->
 
-          <div class="col-md-3 col-sm-6 mb-sm-50">
+          <div class="row">
             <div class="col-md-12">
               <div class="about-second">
                   <img src="assets/images/namesake.jpg" alt="" class="img-responsive">
@@ -113,7 +113,7 @@
             </div>
           </div>
 
-          <div class="col-md-3 col-sm-6 mb-sm-50">
+          <div class="row">
             <div class="col-md-6">
               <div class="about-signature img-responsive">
                 <img src="assets/images/signature.png" alt="" class="img-responsive">
