--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <link rel="stylesheet" href="assets/styles/main.css">
         <link rel="stylesheet" href="assets/styles/responsive.css">
         <link rel="stylesheet" href="assets/styles/custom-main.css">
+        
    
         <!-- JS -->
         <script src="assets/js/vendor/modernizr-2.8.3.min.js"></script>
@@ -177,7 +178,7 @@
             <img src="assets/images/team/brian.jpg" alt="Brian Profile Photo" class="img-responsive">
             <div class="t-description">
               <div class="content-wrapper">
-                <img src="assets/images/team/brian_urban.jpg" alt="Brian Personality Photo" class="img-responsive">
+                <img src="assets/images/team/brian_urban.jpg" alt="Brian Personality Photo" class="mobile-responsive img-responsive">
               </div>
             </div>
           </div>
@@ -204,7 +205,7 @@
             <img src="assets/images/team/carson.jpg" alt="Team Member" class="img-responsive">
             <div class="t-description">
               <div class="content-wrapper">
-                <img src="assets/images/team/carson_urban.jpg" alt="Carson Casual Photo" class="img-responsive">
+                <img src="assets/images/team/carson_urban.jpg" alt="Carson Casual Photo" class="mobile-responsive img-responsive">
               </div>
             </div>
           </div>
@@ -231,7 +232,7 @@
             <img src="assets/images/team/phil.jpg" alt="Phil Profile Photo" class="img-responsive">
             <div class="t-description">
               <div class="content-wrapper">
-                <img src="assets/images/team/phil_urban.jpg" alt="Phil Personality Photo" class="img-responsive">
+                <img src="assets/images/team/phil_urban.jpg" alt="Phil Personality Photo" class="mobile-responsive img-responsive">
               </div>
             </div>
           </div>
@@ -260,7 +261,7 @@
             <img src="assets/images/team/tripp.jpg" alt="Tripp Profile Photo" class="img-responsive">
             <div class="t-description">
               <div class="content-wrapper">
-                <img src="assets/images/team/tripp_urban.jpg" alt="Tripp Personality Photo" class="img-responsive">
+                <img src="assets/images/team/tripp_urban.jpg" alt="Tripp Personality Photo" class="mobile-responsive img-responsive">
               </div>
             </div>
           </div>
@@ -290,7 +291,7 @@
             <img src="assets/images/team/rocky.jpg" alt="Rocky Profile Photo" class="img-responsive">
             <div class="t-description">
               <div class="content-wrapper">
-                <img src="assets/images/team/rocky_urban.jpg" alt="Rocky Personality Photo" class="img-responsive">
+                <img src="assets/images/team/rocky_urban.jpg" alt="Rocky Personality Photo" class="mobile-responsive img-responsive">
               </div>
             </div>
           </div>
@@ -319,7 +320,7 @@
             <img src="assets/images/team/kristin.jpg" alt="Kristin Profile Photo" class="img-responsive">
             <div class="t-description">
               <div class="content-wrapper">
-                <img src="assets/images/team/kristin_urban.jpg" alt="Kristin Personality Photo" class="img-responsive">
+                <img src="assets/images/team/kristin_urban.jpg" alt="Kristin Personality Photo" class="mobile-responsive img-responsive">
               </div>
             </div>
           </div>
@@ -348,7 +349,7 @@
             <img src="assets/images/team/quaid.jpg" alt="Quaid Profile Photo" class="img-responsive">
             <div class="t-description">
               <div class="content-wrapper">
-                <img src="assets/images/team/quaid_urban.jpg" alt="Quaid Personality Photo" class="img-responsive">
+                <img src="assets/images/team/quaid_urban.jpg" alt="Quaid Personality Photo" class="mobile-responsive img-responsive">
               </div>
             </div>
           </div>
