--- a/quaid.html
+++ b/quaid.html
@@ -83,12 +83,12 @@
 
         <!-- ========== Enter Your Content Here ========== -->
 
-        <section class="container section">
+        <section class="container section ft-centered">
           <div class="row ws-m">
             
-            <header class="sec-heading">
+            <header class="sec-heading img-responsive">
               <!-- <h2 class="bio-heading">Brian Dougherty</h2> -->
-              <img src="assets/images/team/quaid-bio.png" alt="Quaid Header Image" class="img-responsive bio-image">
+              <img src="assets/images/team/quaid-bio.png" alt="Quaid Header Image" class="bio-image">
               <h2 class="bio-heading">Director of Security</h2>
               <!-- <span class="subheading">Cheif Executive Officer</span> -->
             </header>
