--- a/clearest_view.html
+++ b/clearest_view.html
@@ -124,7 +124,7 @@
 
               <!-- Image 3 -->
               <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
-                <img src="assets/portfolio-images/3Dmammo/2-LUH_3DMammo_banner.jpg" alt="Clearest View Pullup Banner" class="img-responsive">
+                <img src="assets/portfolio-images/3Dmammo/2-LUH_3DMammo_banner.jpg" alt="Clearest View Pullup Banner" class="img-responsive-1">
                 <h5>Banner</h5>
               </div><!-- / .project-item -->
 
