fix other responsive issues

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="hero-content-wrapper">
               <div class="hero-content">
                 
-                <h1 class="hero-lead-1 wow fadeInLeft" data-wow-duration="1.5s">Welcome To<br> FJG Advertising</h1>
+                <h1 class="hero-lead wow fadeInLeft" data-wow-duration="1.5s">Welcome To<br> FJG Advertising</h1>
                 <h4 class="h-alt hero-subheading wow fadeIn" data-wow-duration="2s" data-wow-delay=".7s">What We Do</h4>
                 <a href="#services" class="btn btn-light wow fadeIn" data-wow-duration="2s" data-wow-delay="1s">Learn More</a>
 
